--- a/diferenciales/ecuaciones-diferenciales.tex
+++ b/diferenciales/ecuaciones-diferenciales.tex
@@ -254,7 +254,7 @@ Revisión del \today $ $ a las \currenttime.
 \listoftheorems[ignore={thm,eg,pro,cor,obs,lm,ex,th_ex}]
 
 \renewcommand{\listtheoremname}{Lista de teoremas}
-\listoftheorems[onlynamed,ignore={dfn,eg,cor,obs,lm,ex,th_ex}]
+\listoftheorems[onlynamed,ignore={dfn,eg,cor,obs,ex,th_ex}]
 
 \renewcommand{\listtheoremname}{Lista de ejemplos}
 \listoftheorems[onlynamed,ignore={dfn,thm,pro,cor,obs,lm,ex,th_ex}]
