--- a/diferenciales/input/4-sistemas-lineales.tex
+++ b/diferenciales/input/4-sistemas-lineales.tex
@@ -144,7 +144,7 @@ con $\mathbb{A} \in \R^{n\times n}$, y $X, B \in \R^{n}$
         $$
             X(t) = \sum_{j=1}^n c_jX_j(t)\ \forall t\in[\alpha, \beta]
         $$
-        \item Vamos a ver ques si tenemos dos soluciones que resuelven el sistema, entonces la resta es la solución de la homogénea. Es decir, si $X(t)$ resuelve $X' = \A(t) + B(t)$, sea:
+        \item Vamos a ver que si tenemos dos soluciones que resuelven el sistema, entonces la resta es solución de la homogénea. Es decir, si $X(t)$ resuelve $X' = \A(t) + B(t)$, sea:
         $$
             Y(t) \equiv X(t) - X_p(t)
         $$
@@ -633,7 +633,7 @@ Vamos a ver distintos usos que podemos darle a la matriz: $e^{t\A}$.
     $$
     Por ejemplo:
     $$
-        U(t) \int_{t_0}^t e^{-s\A}B(s)\d S
+        U(t) = \int_{t_0}^t e^{-s\A}B(s)\d S
     $$
     Y por tanto, la solución particular sería:
     $$
