--- a/diferenciales/input/5-teorema-unicidad.tex
+++ b/diferenciales/input/5-teorema-unicidad.tex
@@ -61,12 +61,12 @@ En esta sección vamos a hablar de funciones $f: I \to \R$ con $I \subset \R$.
     $$
         f_n(x) \xrightarrow[n \to \infty]{}
         \begin{cases}
-            1 \text{ si } 0\geq x < 1 \\
+            1 \text{ si } 0\leq x < 1 \\
             2 \text{ si } x = 1
         \end{cases} \equiv f
     $$
     Entonces es fácil ver que: $f_n \xrightarrow[pp]{} f$\\\\
-    Vamos a ver que $f_n \not\xrightarrow[unif]{} f$ en $[0, 1]$. Tenemos que hallar $N$ para que se cumpla:
+    Vamos a ver que: $f_n \centernot{\xrightarrow[unif]{}} f$ en $[0, 1]$. Tenemos que hallar $N$ para que se cumpla:
     $$
         |f_n(x) - f(x)| < \varepsilon, n\geq N
     $$
@@ -132,7 +132,7 @@ En esta sección vamos a hablar de funciones $f: I \to \R$ con $I \subset \R$.
     \begin{enumerate}
         \item
         $$
-            B(I) = \left\{ g : I to \R, g \text{ acotada} \right\}
+            B(I) = \left\{ g : I \to \R, g \text{ acotada} \right\}
         $$ es decir, $\exists L_g \in \R : |g(t)| < L_g\ \forall t \in I$\\
         Entonces, $B(I)$ es un espacio vectorial y $||\cdot||_\infty$ es una norma en él.
         %%%%TODO: AÑADIR ÚLTIMO EJEMPLO
@@ -196,12 +196,12 @@ En esta sección vamos a hablar de funciones $f: I \to \R$ con $I \subset \R$.
     $$
         |f(t) - f(t_0)| = |f(t) -f_n(t) + f_n(t) -f_n(t_0) + f_n(t_0) - f(t_0)| \leq |f(t) - f_n(t)| + |f_n(t_0) - f(t_0)| + |f_n(t) - f_n(t_0)|
     $$
-    Como $f_n \xrightarrow[unif]{} f$, $\exists N : |f_n(t) - f_(t)| < \sfrac{\varepsilon}{3}$. Fijamos $n = N$, entonces:
-    \begin{gather}
+    Como $f_n \xrightarrow[unif]{} f$, $\exists N : |f_n(t) - f(t)| < \sfrac{\varepsilon}{3}$. Fijamos $n = N$, entonces:
+    \begin{gather*}
         |f(t) - f_n(t)| < \sfrac{\varepsilon}{3}\\
         |f_n(t_0) - f(t_0)| < \sfrac{\varepsilon}{3}
         |f_n(t) - f_n(t_0)| = |f_N(t) - f_N(t_0)|
-    \end{gather}
+    \end{gather*}
     Como $f_N$ es continua:
     $$
         \exists \delta > 0 : |f_N(t) - f_N(t_0)| < \sfrac{\varepsilon}{3} \implies |f(t) - f(t_0)| \leq \frac{\varepsilon}{3}+\frac{\varepsilon}{3}+\frac{\varepsilon}{3} = \varepsilon
@@ -211,9 +211,9 @@ En esta sección vamos a hablar de funciones $f: I \to \R$ con $I \subset \R$.
     $$
         \begin{cases}
             f_n \xrightarrow[pp]{} f\\
-            f_n \text{ continua } \forall n
+            f_n \text{ continua } \forall n\\
             f \text{ no continua}
-        \end{cases} \implies f_n \not\xrightarrow[unif]{} f
+        \end{cases} \implies f_n \centernot{\xrightarrow[unif]{}} f
     $$
 \end{cor}
 
@@ -677,7 +677,7 @@ Vamos a ver enunciado preciso, demostración y algunos usos. Comenzamos con un p
 
 \section{Teorema de existencia y unicidad local}
 
-\begin{thm}[Teorema de existencia y unicidad local]\ref{thm:exist-unic-local}
+\begin{thm}[Teorema de existencia y unicidad local]\label{thm:exist-unic-local}
     Sea $\Omega \in \R^d$ abierto, $F:[a, b] \times \Omega \to \R^d$ continua y uniformemente Lipschitz en $t$, es decir:
     $$
         \exists L : |F(t, X) - F(t, Y)| \leq L |X - Y| \ \forall t \in [a, b],\ \forall X, Y \in \Omega
@@ -737,7 +737,7 @@ Vamos a ver enunciado preciso, demostración y algunos usos. Comenzamos con un p
 En el caso de existencia y unicidad global veíamos que si teníamos una solución definida en un intervalo $I$ podíamos extenderlo a todo un intervalo $[a, b]$ simplemente por unicidad de la solución. Vamos a ver que en el caso de existencia y unicidad local puede que no lleguemos a cubrir todo el intervalo $[a, b]$ debido a que el $\delta$ que define la bola abierta donde existe la solución no es fijo y puede ir haciéndose cada vez más pequeño.
 
 \begin{pro}[Intervalo máximo de existencia-unicidad local]
-    Con las misma hipótesis del teorema de existencia y unicidad local (véase el teorema \label{thm:exist-unic-local}), existe un intervalo máximo en el que está definida la solución. Ese intervalo es uno de los siguientes tipos:
+    Con las misma hipótesis del teorema de existencia y unicidad local (véase el teorema \ref{thm:exist-unic-local}), existe un intervalo máximo en el que está definida la solución. Ese intervalo es uno de los siguientes tipos:
     $$[a, b],\ [a,\beta),\ (\alpha, b],\ (\alpha, \beta)
     $$
     Donde $a \leq \alpha < \beta \leq b$.\\
